# aquamarine-tgc

./: .gitignore  CMakeLists.txt  Card.cpp  Card.hpp  Class codex.docx  Deck.hpp  DeckTest.cpp  Game.cpp  Game.hpp  Main.cpp  MainConsole.cpp  README - Cayden.md  README.md  TestCard.cpp  TestDeck.cpp  TestGame.cpp  cardData.json  cardWidget.cpp  cardWidget.h  common.hpp  mainWindow.cpp  mainWindow.h
Card Class/: Card Class.sln
Card Class/Card Class/: Card Class.cpp  Card Class.vcxproj  Card Class.vcxproj.filters  Card.cpp  Card.h  Deck.cpp  Deck.h  Hand.h
Card Class/Card Class/x64/Debug/: Card Class.exe.recipe  Card Class.ilk  vc143.idb
Card Class/Card Class/x64/Debug/Card Class.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Card Class.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.3.tlog  link.secondary.1.tlog  link.write.1.tlog
Card_Unit_Test/: Card_Unit_Test.sln
Card_Unit_Test/Card_Unit_Test/: Card_Unit_Test.cpp  Card_Unit_Test.vcxproj  Card_Unit_Test.vcxproj.filters
Draft READMEs/: README - Isabella.md  README - Michael.md
